[mod] unset explicit z-index value for cards to prevent overlayed dialogs

--- a/src/mdl-extension/card/_card.scss
+++ b/src/mdl-extension/card/_card.scss
@@ -4,6 +4,10 @@
  * @author Michael Haschke
  */
 
+.mdl-card {
+    z-index: auto; // TODO: check if this value brings up problems
+}
+
 .mdl-card--stretch,
 .mdl-card--full-width {
     width: auto;
